k8s/gcp/slots.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slots-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      service: slots
  template:
    metadata:
      labels:
        service: slots
    spec:
      containers:
      - name: slots-deployment
        image: olivercvetkovski/zvax-slots:latest
        command: [
          "/app/service",
          "run",
          "--config=slots.gcp.config.yaml",
          "--address=:5051"
        ]
        resources:
          limits:
            memory: "128Mi"
            cpu: "125m"
          requests:
            memory: "128Mi"
            cpu: "125m"
        ports:
        - containerPort: 5051
          name: grpc-port
        - containerPort: 80
          name: healthz-port
        volumeMounts:
          - name: slots-secret-volume
            mountPath: "/app/config"
            readOnly: true
      volumes:
        - name: slots-secret-volume
          secret:
            secretName: slots-secret
            optional: false
---
apiVersion: v1
kind: Service
metadata:
  name: slots-service
  annotations:
    cloud.google.com/app-protocols: '{"slots-grpc":"HTTP2", "slots-healthz":"HTTP"}'
spec:
  type: ClusterIP
  selector:
    service: slots
  ports:
  - port: 50051
    targetPort: grpc-port
    name: slots-grpc
  - port: 80
    targetPort: healthz-port
    name: slots-healthz
